describe('Example', () => {
  beforeAll(async () => {
    await device.launchApp();
  });

  beforeEach(async () => {
    await device.reloadReactNative();
  });

  it('should have welcome screen', async () => {
    await expect(element(by.id('welcome'))).toBeVisible();
  });

  it('check register a new skill', async () => {
    const inputNewSkill = await element(by.id('input:new'));
    const buttonAdd = await element(by.id('button:add'));
    const textSkillCard = await element(by.id('text:SkillCard')); 

    await inputNewSkill.tap();
    await inputNewSkill.typeText("React Native\n");
    await buttonAdd.tap();

    await expect(textSkillCard).toBeVisible();
  });
});
